facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_options_none_vs_some.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before───────────╮
│None             │
╰─────────────────╯
╭After────────────╮
│Some(42)         │
╰─────────────────╯
╔Diff═════════════╗
║None → Some(42)  ║
╚═════════════════╝
