facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_scalar_bool_equal_false.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────╮
│false               │
╰────────────────────╯
╭After───────────────╮
│false               │
╰────────────────────╯
╔Diff════════════════╗
║(structurally equal)║
╚════════════════════╝
