facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_scalar_byte_slice_binary.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before─────────────────╮
│[u8] [                 │
│   00 ff 42            │
│]                      │
╰───────────────────────╯
╭After──────────────────╮
│[u8] [                 │
│   00 fe 42            │
│]                      │
╰───────────────────────╯
╔Diff═══════════════════╗
║[                      ║
║    - 0                ║
║    - 255              ║
║    + 0                ║
║    + 254              ║
║    .. 1 unchanged item║
║]                      ║
╚═══════════════════════╝
