facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_scalar_char_ascii_to_unicode.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────╮
│R           │
╰────────────╯
╭After───────╮
│日          │
╰────────────╯
╔Diff════════╗
║R → 日      ║
╚════════════╝
