facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_scalar_f32_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────╮
│3.1415927           │
╰────────────────────╯
╭After───────────────╮
│3.1415927           │
╰────────────────────╯
╔Diff════════════════╗
║(structurally equal)║
╚════════════════════╝
