facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_scalar_f64_infinity.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────╮
│inf         │
╰────────────╯
╭After───────╮
│-inf        │
╰────────────╯
╔Diff════════╗
║inf → -inf  ║
╚════════════╝
